src/rules/snapshots/pg_migration_lint__rules__pgm023__tests__chain_survives_across_attach_partition.snap
---
source: src/rules/pgm023.rs
expression: findings
---
- rule_id: PGM023
  severity: Minor
  message: "Table 'authors' has multiple ALTER TABLE statements with the same lock level in this migration (preceding statement at line 1). Combine them into a single ALTER TABLE to reduce lock contention."
  file: migrations/002.sql
  start_line: 5
  end_line: 5
